--- a/package.json
+++ b/package.json
@@ -20,13 +20,14 @@
     "expo-permissions": "~12.0.1",
     "expo-status-bar": "~1.0.4",
     "graceful-fs": "^4.2.6",
-    "radio-buttons-react-native": "^1.0.4",
     "react": "16.13.1",
+    "react-bootstrap": "^1.6.0",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-41.0.0.tar.gz",
     "react-native-aws3": "0.0.9",
     "react-native-elements": "^3.3.0",
     "react-native-gesture-handler": "~1.10.2",
+    "react-native-paper": "^4.8.1",
     "react-native-screens": "~3.0.0",
     "react-native-web": "~0.13.12",
     "react-redux": "^7.2.1",
