--- a/app.json
+++ b/app.json
@@ -2,7 +2,7 @@
   "expo": {
     "name": "SRI Acne",
     "slug": "SRIAcne",
-    "version": "1.1.3",
+    "version": "1.1.6",
     "orientation": "portrait",
     "icon": "./assets/icon-new-working.png",
     "splash": {
@@ -17,8 +17,8 @@
       "**/*"
     ],
     "ios": {
-      "supportsTablet": true,
-      "buildNumber": "1.1.3",
+      "supportsTablet": false,
+      "buildNumber": "1.1.6",
       "bundleIdentifier": "com.SkinResearchInstitute.SRIAcne",
       "infoPlist": {
         "NSCameraUsageDescription": "This app uses the camera to scan for skin acne.",
